firebase added product image ui and integration done

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     content="A decentralized NFT marketplace for artists and collectors. Create, buy, sell or just HODL NFT's secured with blockchain." />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
-  <title>staging.mercado.studio</title>
+  <title>Import win</title>
 </head>
 
 <body>
