--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
   <meta name="keywords" content="MERCADO STUDIO, MERCADO, NFT,MARKETPLACE" />
 
   <meta name="description"
-    content="A decentralized NFT marketplace for artists and collectors. Create, buy, sell or just HODL NFT's secured with blockchain." />
+    content="Warranty system using NFTs" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
   <title>Import win</title>
